--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
+    "react-touch-carousel": "^0.9.4",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
