--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://1pinkmann.github.io/thinkbountApp/",
   "name": "thinkbound-react",
   "version": "0.1.0",
   "private": true,
